fix top menu bar cut off issue

--- a/app/styles/bootstrap/grid.less
+++ b/app/styles/bootstrap/grid.less
@@ -11,7 +11,6 @@
   width: 100%;
   margin-right: auto;
   margin-left: auto;
-  max-width: @cont-width;
   padding: 0 @grid-gutter-width*2.5;
   &:extend(.clearfix all);
   @media screen and (max-width: @screen-lg) {
